--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,2 +1,7 @@
-<h1>All photos</h1>
-<%= render partial: "item", collection: @items %>
+<div class="title">
+    <h1>All photos</h1>
+</div>
+
+<div class="items-grid">
+    <%= render partial: "item", collection: @items %>
+</div>
