--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,6 +1,11 @@
-<h1><%= @item.title %></h1>
-<%= image_tag @item.image.medium.url %>
+<div class="item-page">
 
-<p>
-    <%= link_to "Download", @item.image.url, download: true %>
-</p>
+    <h1><%= @item.title %></h1>
+
+    <%= image_tag @item.image.medium.url %>
+
+    <p>
+        <%= link_to "Download", @item.image.url, download: true %>
+    </p>
+
+</div>
