--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,10 @@
             <nav>
                 <% if is_logged_in? %>
                     Hello, <%= @current_user.name %>
+
+                    <%= link_to "All photos", items_path %>
+                    <%= link_to "Categories", categories_path %>
+
                     <%# method: :delete comes from rails routes %>
                     <%= link_to "Log out", session_path, method: :delete %>
                 <% else %>
