--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,5 +1,10 @@
 <div class="title">
     <h1>All photos</h1>
+
+    <form action="">
+        <input type="text" name="q" value="<%= params[:q] %>">
+    </form>
+    
 </div>
 
 <div class="items-grid">
