--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -9,6 +9,78 @@
     <%= f.input :password %>
     <%= f.input :password_confirmation %>
 
+    <%# Passes through to db as 'basic' %>
+    <%= f.input :subscription_plan, as: :select, collection: 
+    [['Basic subscription - $9.99/mo', 'price_1IVawhD7nNv7ju6LIVDqDrDW'], ['Pro subscription - $19.99/mo', 'price_1IVaxBD7nNv7ju6LTVYmp2xv']], include_blank: false %>
+
+    <div id="card-errors">
+        <% @user.errors[:stripe_token].each do |err| %>
+            <%= err %>
+        <% end %>
+    </div>
+    <div id="card-element"></div>
+
     <%= f.button :submit %>
     
 <% end %>
+
+
+<script>
+    // Create an instance of the Stripe object with your key
+    var stripe = Stripe("<%= Rails.application.credentials.stripe[Rails.env.to_sym][:stripe_public_key] %>")
+    
+    // Create an instance of Stripe's UI Elements
+    var elements = stripe.elements();
+
+    // Styles for the card Element
+    var styles = {
+        base: {
+            fontSize: '16px',
+            color: '#32325d',
+        },
+    };
+
+    // Create an instance of the card Element, style it
+    var card = elements.create("card", {style: styles, hidePostalCode: true});
+
+    // Mount it to the div 
+    card.mount("#card-element");
+
+    // When form is submitted, either create token or display errors
+    var form = document.getElementById('new_user');
+
+    form.addEventListener('submit', (event) => {
+        event.preventDefault();
+
+        stripe.createToken(card).then((result) => {
+            if (result.error) {
+            // Show error message
+            var errorElement = document.getElementById("card-errors");
+            errorElement.textContent = result.error.message;
+            
+            } else {
+                // Send token to the server
+                stripeTokenHandler(result.token);
+            }
+        });
+    });
+
+
+    var stripeTokenHandler = (token) => {
+        // Optional: Check if your token ID is printing
+        console.log(token.id);
+
+        // Insert the token ID into the form
+        var form = document.getElementById('new_user');
+
+        var hiddenInput = document.createElement('input');
+        hiddenInput.setAttribute('type', 'hidden');
+        hiddenInput.setAttribute('name', 'user[stripe_token]');
+        hiddenInput.setAttribute('value', token.id);
+        form.appendChild(hiddenInput);
+
+    // Submit the form
+    form.submit();
+    }
+    
+</script>
