User can delete their account/unsubscribe

--- a/app/views/accounts/edit.html.erb
+++ b/app/views/accounts/edit.html.erb
@@ -11,3 +11,11 @@
     <%= f.button :submit, "Update account" %>
 
 <% end %>
+
+<p>
+    <%= link_to "Delete account",
+        account_path,
+        method: :delete,
+        data: { confirm: "Are you sure you want to delete your account?" } 
+    %>
+</p>
